[package]
name = "pallet-toggle"
version = "4.0.0-dev"
description = "An example of a FRAME pallet that toggles a state."
authors = ["Papermooon"]
homepage = "https://papermoon.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
